# NeoNexus

./: .gitignore  README.md
.github/workflows/: windows-ci.yml
Windows/: README.md
Windows/installer/inno/: installer.iss
Windows/installer/wix/: Product.wxs
Windows/native/: CMakeLists.txt  NeoNexusNative.cpp  NeoNexusNative.h
Windows/native/src/: pkg_parser.cpp  pkg_parser.h
Windows/native/win32/: UsbHelpers.cpp  UsbHelpers.h
Windows/tests/managed_tests/NeoNexus.WinDemo.Tests/: CbpsCsvParserTests.cs  NeoNexus.WinDemo.Tests.csproj  VitaDbServiceTests.cs
Windows/tests/native_tests/: CMakeLists.txt  NativeTests.cpp
Windows/win/: NeoNexus.WinDemo.sln
Windows/win/NeoNexus.WinDemo/: AppConfig.cs  Config.cs  MainForm.IconLoader.cs  MainForm.cs  NativeMethods.cs  NeoNexus.WinDemo.csproj  Program.cs  appsettings.json
Windows/win/NeoNexus.WinDemo/Models/: CbpsEntry.cs  VitaDbModels.cs
Windows/win/NeoNexus.WinDemo/Properties/: Resources.resx
Windows/win/NeoNexus.WinDemo/Services/: CbpsService.cs  DownloadManager.cs  VitaDbService.cs
Windows/win/NeoNexus.WinDemo/Views/: HomebrewListView.cs  PkgDetailView.cs
